--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="page">
             <div class="content">
                 <div class="logo">
-                    <a class="brand-logo" href="index.html">Error 404</a>
+                    <a class="brand-logo" href="index.html">Under Construction</a>
                 </div>
                 <div class="w3l-error-grid">
-                    <h1>404</h1>
-                    <h2>Page not found</h2>
+                    <h1>Under Construction</h1>
+                    <h2>Page went down for changes</h2>
                 </div>
 
                 <div class="copy-right text-center">
-                    <p>© 2020 . All rights reserved </p>
+                    <p>© 2021 . All rights reserved </p>
                     <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
                 </div>        
             </div>
