--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             animate();
         </script>
     </div>
+    
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-606fd5449848e106"></script>
+
+    
 </body>
 
 </html>
