--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <!--/fontAwesome-CSS -->
     <link rel="stylesheet" href="css/fontAwesome.css" type="text/css" media="all" />
     <!--/fontAwesome-CSS -->
+    <!-- Favicon  -->
+    <link rel="icon" href="https://unknownus.tk/images/favicon.png">
+    <!-- Favicon  -->
+    
 </head>
 
 <body>
@@ -59,8 +63,7 @@
                 </div>
 
                 <div class="copy-right text-center">
-                    <p>© 2021 . All rights reserved </p>
-                    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+                    <p>Copyright © 2015 - 2021 . All rights reserved by <a href="https://unknowns.tk/">Unknowns Inc.</a> </p>
                 </div>        
             </div>
             <img src="images/bg.jpg" class="img-responsive" alt="error image" />
