--- a/nothing.html
+++ b/nothing.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title>Under Construction | Unknowns Inc.</title>
+    <title>This section is not yet opened | Unknowns Inc.</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
@@ -56,10 +56,10 @@
         <div class="page">
             <div class="content">
                 <div class="logo">
-                    <a class="brand-logo" href="index.html">Under Construction</a>
+                    <a class="brand-logo" href="index.html">Sorry :((</a>
                 </div>
                 <div class="w3l-error-grid">
-                    <h2>Page went down for changes</h2>
+                    <h2>This Section Is Not Yet Opened.</h2>
                 </div>
 
                 <div class="copy-right text-center">
