--- a/nothing.html
+++ b/nothing.html
@@ -66,6 +66,7 @@
                     <p>Copyright © 2015 - 2021 . All rights reserved by <a href="https://unknownus.tk/">Unknowns Inc.</a> </p>
                 </div>        
             </div>
+            <img src="images/bg-black.jpg" class="img-responsive" alt="error image" />
         </div>
 
         <script src="js/jquery-3.3.1.min.js"></script>
