--- a/nothing.html
+++ b/nothing.html
@@ -60,6 +60,7 @@
                 </div>
                 <div class="w3l-error-grid">
                     <h2>This Section Is Not Yet Opened.</h2>
+                    <h2>To Stay Updated Subcribe To Our Newsletter!</h2>
                 </div>
 
                 <div class="copy-right text-center">
